--- a/khoBlog/templates/includes/nav/undernav.html
+++ b/khoBlog/templates/includes/nav/undernav.html
@@ -5,6 +5,7 @@
 <div class="nav-scroller shadow-sm mb-2">
     <nav class="nav nav-underline d-flex justify-content-between">
         {% links_menu urls %}
+        {% featured_big_post_list urls %}
         {% featured_post_list urls %}
         {% links urls %}
     </nav>
