--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -67,13 +67,32 @@
 
                 <h2 class="card-title">{{ title }}</h2>
                 <div>
-                    <p class="mb-auto text-muted">{{ post.body|readtime }}</p>
                     {% include 'blog/includes/post_dates.html' %}
+                    <p class="mb-auto text-muted">
+                        {% if not body %}
+                            {{ post.body|readtime }}
+                        {% else %}
+                            A while
+                        {% endif %}
+                    </p>
                 </div>
+
                 {% if post.post_image %}
                     <img src="{{ post.post_image.url }}" alt="Post image" />
                 {% endif %}
-                <span class="card-text">{{ post.body|formatted_markdown|safe }}</span>
+
+                <div class="card-text">
+                    {% if body %}
+                        {% for content in body %}
+                            {{ content.body|formatted_markdown|safe }}
+                            {% if content.post_body_image %}
+                                <img src="{{ content.post_body_image.url }}" alt="content.post_body_image_alt">
+                            {% endif %}
+                        {% endfor %}
+                    {% else %}
+                        {{ post.body|formatted_markdown|safe }}
+                    {% endif %}
+                </div>
                 {% if post.url_post_type %}
                     <a class="card-link" href="{{ post.url_post_type }}">{{ post.url_post_type_name }}</a>
                 {% endif %}
