--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -86,7 +86,7 @@
                         {% for content in body %}
                             {{ content.body|formatted_markdown|safe }}
                             {% if content.post_body_image %}
-                                <img src="{{ content.post_body_image.url }}" alt="content.post_body_image_alt">
+                                <img src="{{ content.post_body_image.url }}" alt="{{ content.post_body_image_alt }}">
                             {% endif %}
                         {% endfor %}
                     {% else %}
