--- a/khoBlog/static/khoBlog/css/main.scss
+++ b/khoBlog/static/khoBlog/css/main.scss
@@ -135,6 +135,20 @@ aside p:last-child {
     margin-bottom: 0;
 }
 
+.text-then-hr {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid;
+    @include border-color('border-color');
+    height: 0px;
+    line-height: 0px;
+}
+
+.hr-title {
+    @include background-color('bg');
+}
+
 .markdownx-preview,
 .card-body .card-text {
     font-variant-ligatures: common-ligatures;
