tags list and stuff

--- a/blog/templates/blog/includes/aside_nav_post_info.html
+++ b/blog/templates/blog/includes/aside_nav_post_info.html
@@ -33,7 +33,7 @@
     <p>Description: {{ description }}</p>
 
     {% if post.tags %}
-        <p>Tags: {% for tags in post.tags.all %}{{ tags }}{% if not forloop.last %}, {% endif %}{% endfor %}</p>
+        <p>Tags: {% for tags in post.tags.all %} <a href="{% url 'blog:post_tagged_with' slug=tags.slug %}">{{ tags }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</p>
         <p>Similar Posts: {% for e in similar_posts %}<a href="{{ e.get_absolute_url }}">{{ e }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</p>
     {% endif %}
 
