--- a/blog/templates/blog/includes/aside_nav_post_info.html
+++ b/blog/templates/blog/includes/aside_nav_post_info.html
@@ -34,7 +34,7 @@
 
     {% if post.tags %}
         <p>Tags: {% for tags in post.tags.all %} <a href="{% url 'blog:post_tagged_with' slug=tags.slug %}">{{ tags }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</p>
-        <p>Similar Posts: {% for e in similar_posts %}<a href="{{ e.get_absolute_url }}">{{ e }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</p>
+        <p>Similar Posts: {% for e in similar_posts %}{% if not e.withdrawn and e.published_date <= now or user.is_superuser %}<a href="{{ e.get_absolute_url }}">{{ e }}</a>{% if not forloop.last %}, {% endif %}{% endif %}{% endfor %}</p>
     {% endif %}
 
     <p>Clicks: {{ post.clicks }}</p>
