archive date view

--- a/blog/templates/blog/includes/aside_nav_post_info.html
+++ b/blog/templates/blog/includes/aside_nav_post_info.html
@@ -1,7 +1,7 @@
 <div class="card p-4 mb-2 rounded shadow">
     <h4 class="fst-italic">About this Post</h4>
     <p>
-        <a class="card-link" href="{% url 'accounts:profile' pk=post.author.pk %}">
+        <a class="card-link" href="{% url 'accounts:profile' slug=post.author.slug %}">
             Author:
             {{ post.author }} -
             {% if post.author.is_superuser %}
