--- a/reading_apis_app/templates/reading_apis_app/detail.html
+++ b/reading_apis_app/templates/reading_apis_app/detail.html
@@ -1,21 +1,24 @@
 {% extends 'sub_base.html' %}
 
 {% block content %}
-    <div class="container">
-        {% for thing in things %}
-            <div class="row">
+    {% for thing in things %}
+        <div class="card mb-2">
+            <div class="card-body">
+                <div class="card-text">
+                    <div class="row">
                 <div class="col-auto">
                     {% for field in thing %}
-                        <p>{{field}}:</p>
+                        <p class="mb-0">{{field}}:</p>
                     {% endfor %}
                 </div>
                 <div class="col-auto">
                     {% for value in thing.values %}
-                        <p>{{ value }}</p>
+                        <p class="mb-0">{{ value }}</p>
                     {% endfor %}
                 </div>
             </div>
-            <br>
-        {% endfor %}
-    </div>
+                </div>
+            </div>
+        </div>
+    {% endfor %}
 {% endblock %}
