--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -15,6 +15,11 @@
     </div>
 {% endblock page_top_end %}
 
+{% block page_top %}
+    {% block page_top_hr %}
+    {% endblock page_top_hr %}
+{% endblock page_top %}
+
 {% block content_main %}
     {% if post.published_date and not post.withdrawn and not post.published_date > now or not post.published_date and user.is_superuser or post.withdrawn and user.is_superuser or post.published_date > now and user.is_superuser %}
 
