--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,6 +16,8 @@
 {% endblock page_top_end %}
 
 {% block page_top %}
+    {{ block.super }}
+
     {% block page_top_hr %}
     {% endblock page_top_hr %}
 {% endblock page_top %}
