--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -1,4 +1,4 @@
-{% extends 'portfolio/base_projects.html' %}
+{% extends 'blog/base_post.html' %}
 {% load static %}
 
 {% block main %}
@@ -20,8 +20,37 @@
             {% if not project.featured %}
                 <div class="col-lg-4">
                     <div class="card shadow mb-2">
-                        <div class="card-header">
-                            <h2>Project #{{ project.id }}</h2>
+                        <div class="card-header d-flex">
+                            <span class="col">
+                                <h2>Project #{{ project.id }}</h2>
+                            </span>
+                            <span class="col">
+                                {% block super_buttons %}
+                                    {% if user.is_superuser %}
+                                        <div class="btn-group float-end">
+                                            <a class="btn btn-secondary" href="{% url 'portfolio:project_edit' slug=project.slug %}">
+                                                <i class="bi bi-pencil-square"></i> Edit
+                                            </a>
+
+                                            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="projectAdminDropdown-{{ project.id }}" data-bs-toggle="dropdown" aria-expanded="false">
+                                                <span class="visually-hidden">Toggle Dropdown</span>
+                                            </button>
+
+                                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="projectAdminDropdown">
+                                                <a class="dropdown-item" href="{% url 'admin:portfolio_project_change' object_id=project.id %}">
+                                                    <i class="bi bi-pencil-square"></i> Edit in Admin
+                                                </a>
+
+                                                <div class="dropdown-divider"></div>
+
+                                                <a class="dropdown-item" href="{% url 'portfolio:project_delete' slug=project.slug %}">
+                                                    <i class="bi bi-trash"></i> Delete
+                                                </a>
+                                            </ul>
+                                        </div>
+                                    {% endif %}
+                                {% endblock super_buttons %}
+                            </span>
                         </div>
 
                         <div class="card-body">
@@ -30,9 +59,11 @@
                         </div>
 
                         <div class="card-footer">
-                            <div class="btn-group-vertical d-block" role="group" aria-label="">
-                                <a class="btn btn-primary" href="{{ project.get_absolute_url }}">Continue Reading</a>
-                            </div>
+                            <span class="d-flex">
+                                <span class="col">
+                                    <a class="card-link" href="{{ project.get_absolute_url }}">Check the Project</a>
+                                </span>
+                            </span>
                         </div>
 
                     </div>
