--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -16,10 +16,26 @@
                             <span class="col">
                                 {% block super_buttons %}
                                     {% if user.is_superuser %}
-                                        <div class="float-end btn-group" role="group" aria-label="Edit Group">
-                                            <a class="btn btn-danger" href="{% url 'admin:pages_flatpage_change' object_id=page.id %}">
-                                                <i class="bi bi-pencil-square"></i>
+                                        <div class="btn-group float-end">
+                                            <a class="btn btn-secondary" href="{% url 'pages:page_edit' slug=page.slug %}">
+                                                <i class="bi bi-pencil-square"></i> Edit
                                             </a>
+
+                                            <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" id="postAdminDropdown-{{ post.id }}" data-bs-toggle="dropdown" aria-expanded="false">
+                                                <span class="visually-hidden">Toggle Dropdown</span>
+                                            </button>
+
+                                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="postAdminDropdown">
+                                                <a class="dropdown-item" href="{% url 'admin:pages_flatpage_change' object_id=page.id %}">
+                                                    <i class="bi bi-pencil-square"></i> Edit in Admin
+                                                </a>
+
+                                                <div class="dropdown-divider"></div>
+
+                                                <a class="dropdown-item" href="{% url 'pages:page_delete' slug=page.slug %}">
+                                                    <i class="bi bi-trash"></i> Delete
+                                                </a>
+                                            </ul>
                                         </div>
                                     {% endif %}
                                 {% endblock super_buttons %}
