--- a/portfolio/templates/portfolio/project_confirm_delete.html
+++ b/portfolio/templates/portfolio/project_confirm_delete.html
@@ -2,7 +2,7 @@
 {% load bootstrap5 %}
 
 {% block main %}
-    <h3>Delete: {{ post.title }}</h3>
+    <h3>Delete: {{ project.title }}</h3>
     <form method="POST" class="form">
         {% csrf_token %}
         <h4>Are you sure ?</h4>
