--- a/portfolio/templates/portfolio/project_update.html
+++ b/portfolio/templates/portfolio/project_update.html
@@ -1,16 +1,15 @@
 {% extends 'blog/base_post.html' %}
 {% load bootstrap5 %}
+{% load markdown_extra %}
 
 {% block main %}
-    <h3>Delete: {{ post.title }}</h3>
-    <form method="POST" class="form">
+    <form method="POST" enctype="multipart/form-data" class="form">
         {% csrf_token %}
-        <h4>Are you sure ?</h4>
-        {{ form.as_p }}
-
+        {% bootstrap_form form %}
         {% buttons %}
             <button type="submit" class="btn btn-primary mt-2">{{ title }}</button>
         {% endbuttons %}
     </form>
+    {{ form.media }}
 
 {% endblock main %}
