--- a/khoBlog/templates/404.html
+++ b/khoBlog/templates/404.html
@@ -9,7 +9,7 @@
 {% endblock page_top_end %}
 
 {% block content_main %}
-    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">This page doesn't exist</a>
+    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Not found</a>
 {% endblock content_main %}
 
 {% block pagination %}
