--- a/khoBlog/templates/404.html
+++ b/khoBlog/templates/404.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% load markdown_extra %}
 
+{% block page_top_title %}
+    Not Found
+{% endblock page_top_title %}
+
 {% block page_top_end %}
     <a class="btn btn-primary float-end" href="{% url 'blog:latest' %}">
         Latest Post
@@ -9,7 +13,7 @@
 {% endblock page_top_end %}
 
 {% block content_main %}
-    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Not found</a>
+    <a class="btn btn-danger" href="{% url 'pages:kheee' %}">Not Found</a>
 {% endblock content_main %}
 
 {% block pagination %}
