--- a/khoBlog/static/khoBlog/css/main.scss
+++ b/khoBlog/static/khoBlog/css/main.scss
@@ -15,6 +15,11 @@
     @include color('text');
 }
 
+.form .mb-3 .form-label[for='id_honeypot'],
+#id_honeypot {
+    display: none;
+}
+
 @media (min-width: lg) {
     .pe-kho-lg-12 {
         padding-right: 12px;
