--- a/portfolio/templates/portfolio/project_list.html
+++ b/portfolio/templates/portfolio/project_list.html
@@ -54,7 +54,7 @@
                         </div>
 
                         <div class="card-body">
-                            <h2 class="card-title">{{ project.title }}</h2>
+                            <h2 class="card-title mb-0">{{ project.title }}</h2>
                             <p class="card-text">{{ project.snippet }}</p>
                         </div>
 
