--- a/blog/templates/blog/includes/post_dates.html
+++ b/blog/templates/blog/includes/post_dates.html
@@ -1,5 +1,5 @@
 <div class="d-block">
-    <p class="mb-auto text-muted">
+    <p class="mb-auto text-small text-muted">
     {% if not post.published_date %}
         {{ post.created_date|date:'l, d F Y H:i:s' }}
     {% else %}
