--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -92,7 +92,8 @@
         <link rel="shortcut icon" type="image/png" href="{% static 'khoBlog/img/favicon.ico' %}"/>
 
         <!-- rel! Fonts / Icons -->
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 
         <!-- rel! Themes -->
         <link rel="stylesheet" href="{% static 'khoBlog/css/highlight.css' %}">
