--- a/khoBlog/templates/comments/list.html
+++ b/khoBlog/templates/comments/list.html
@@ -6,7 +6,22 @@
             <div id="comment-{{ comment.id }}" class="card mt-2">
                 <div class="card-header">
                     <h4>
-                        {{ comment.user }}
+                        {% if comment.alias_user or comment.user and comment.alias_user %}
+                            {% if user.is_superuser %}
+                                <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a>
+                                <span class="text-small text-muted">{{ comment.alias_user }}</span>
+                            {% else %}
+                                {{ comment.alias_user }}
+                            {% endif %}
+                        {% else %}
+                            {% if user.is_superuser or user.id == comment.user.id %}
+                                <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a>
+                            {% elif comment.user.owner and user.is_authenticated %}
+                                <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a>
+                            {% else %}
+                                {{ comment.user }}
+                            {% endif %}
+                        {% endif %}
                     </h4>
                     <p class="text-muted text-small mb-0">
                         <span>{{ comment.submit_date|date:'l, d F Y' }}</span>
