--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -251,6 +251,7 @@
     <!-- rel! js -->
     <script src="{% static 'khoBlog/js/scripts/dynamic.js' %}"></script>
     <script src="{% static 'vendor/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'khoBlog/js/scripts/offcanvas.js' %}"></script>
 
     <script>
         (function(exports) {
