--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -118,11 +118,11 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top shadow-sm" aria-label="Main navigation">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'blog:post_list' %}">Khodok's Blog</a>
-            <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="offcanvas" aria-label="Toggle navigation">
+            <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#top_navbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="navbar-collapse offcanvas-collapse" id="top_navbar">
+            <div class="navbar-collapse offcanvas-collapse" data-bs-labelledby="top_navbar" data-bs-backdrop="false" id="top_navbar">
                 <div class="d-block d-lg-none">
                     {% block nav %}
                     {% endblock nav %}
