--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -122,7 +122,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="navbar-collapse offcanvas-collapse" id="top_navbar">
+            <div class="navbar-collapse offcanvas-collapse" data-bs-scroll="false" id="top_navbar">
                 <div class="d-block d-lg-none">
                     {% block nav %}
                     {% endblock nav %}
